Sids challenge response

--- a/alembic.ini
+++ b/alembic.ini
@@ -55,7 +55,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+#note from dev: this gets overwritten in env.py with the value from settings.py
+#sqlalchemy.url = driver://alembic:alembic_12345@localhost/advinow_challenge
 
 
 [post_write_hooks]
